# sql-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/sql_mcp/: client.py
src/sql_mcp/client/: client.py
src/sql_mcp/server/: schema_embeddings.py  server.py  tools.py
src/sql_mcp/server/embeddings/: __init__.py  cache.py  config.py  core.py  database.py  llm.py  vector_store.py
src/sql_mcp/server/utils/: __init__.py  helpers.py
