[project]
name = "sql-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Vamshi Krishna Kodimala",email = "102660840+vkrishna03@users.noreply.github.com."}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "mcp (>=1.6.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "langchain-postgres (>=0.0.14,<0.0.15)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "langgraph (>=0.3.31,<0.4.0)",
    "langchain-mcp-adapters (>=0.0.9,<0.0.10)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "backoff (>=2.2.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sql_mcp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
